--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "easyswoole/orm": "^1.3",
         "easyswoole/mysqli": "^2.2",
         "easyswoole/hot-reload": "^0.1.2",
-        "easyswoole/jwt": "^1.0"
+        "easyswoole/jwt": "^1.0",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
